2009-01-07  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java:
	Fixed NPE occurring when trying to get authconstraint for page
	which has no configuration.

2008-12-18  Dunja Fehrenbach <dunja.fehrenbach@1und1.de>

    Add support for java.util.Set in OXM serializer
	
	* src/de/schlund/pfixcore/oxm/impl/serializers/SetSerializer.java:
	Added serializer for java.util.Set
	* src/de/schlund/pfixcore/oxm/impl/annotation/SetSerializer.java:
	Added annotation for SetSerializer
	* src/de/schlund/pfixcore/oxm/impl/SerializerRegistry.java:
	Added SetSerializer to registry
	* tests/junit/de/schlund/pfixcore/oxm/bean/SetTestBean.java:
	* tests/junit/de/schlund/pfixcore/oxm/SetTest.java:
	Added unit test for java.util.Set support in OXM serializer


2008-12-12  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/util/GenerateSCodes.java: 
	* src/de/schlund/pfixcore/util/GenerateSCodesTask.java: 
	Changed GenerateSCodes to use relative paths instead of DocrootResources.
	This was needed in order to build Maven modules which themselves contain
	Maven modules. 

2008-12-09  Martin Leidig <mleidig@schlund.de>

	Added support for referencing parent bean definitions from 
	state elements using the parent-bean-ref attribute.

	* src/org/pustefixframework/config/contextxmlservice/parser/internal/StateConfigImpl.java:
	added setter for parent bean reference
	* src/org/pustefixframework/config/contextxmlservice/parser/PageRequestStateParsingHandler.java:
	added reading/setting of parent-bean-ref attribute for states
	* projects/core/schema/context-xml-service-config.xsd: added optional
	parent-bean-ref definition to state element

2008-12-09  Martin Leidig <mleidig@schlund.de>

	* projects/core/build/create_apacheconf.xsl: fixed xpath error
	which prevented project disabling from working

2008-12-09  Martin Leidig <mleidig@schlund.de>

	Fixed requirestoken/policy issue (these input element attributes